--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -12,9 +12,9 @@
     {# use first four page images for twitter gallery card #}
     {% for page in pages.object_list|slice:":4" %}
     {% if forloop.first %}   {# use first page image for facebook/g+ image #}
-    <meta property="og:image" content="{{ site_root }}{% url 'books:page-thumbnail' page.pid %}"/>
+    <meta property="og:image" content="{{ site_root }}{% url 'books:page-thumbnail' vol.pid page.pid %}"/>
     {% endif %}
-    <meta property="twitter:image{{ forloop.counter0 }}:src" content="{{ site_root }}{% url 'books:page-thumbnail' page.pid %}">
+    <meta property="twitter:image{{ forloop.counter0 }}:src" content="{{ site_root }}{% url 'books:page-thumbnail' vol.pid page.pid %}">
     {% endfor %}
 {% endblock %}
 
@@ -33,7 +33,7 @@
             <div class="btn-group">
                 {% for page in pages.object_list %}
                     {% if forloop.first %}
-                        <a id="covers" href="{% url 'books:page' page.pid %}" class="btn"><span class="glyphicon glyphicon-file"></span></a>
+                        <a id="covers" href="{% url 'books:page' vol.pid page.pid %}" class="btn"><span class="glyphicon glyphicon-file"></span></a>
                     {% endif %}
                 {% endfor %}
 
@@ -52,7 +52,7 @@
                 {% for page in pages.object_list %}
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
                 <li class="">
-                    <a class="cover thumbnail" style="background-image:url('{% url 'books:page-thumbnail' page.pid %}')" href="{% url 'books:page' page.pid %}" title="Page {{ page.page_order }}">
+                    <a class="cover thumbnail" style="background-image:url('{% url 'books:page-thumbnail' vol.pid page.pid %}')" href="{% url 'books:page' vol.pid page.pid %}" title="Page {{ page.page_order }}">
                         <p class="page-number">p. {{page.page_order}}</p>
                     </a>
                 </li>
