Fix html title order on 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,7 @@
    <link href="{% static 'eultheme/css/eultheme_errpages.css' %}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
-{% block page-subtitle %}: Document Not Found{% endblock %}
+{% block page-subtitle %}Document Not Found |{% endblock %}
 {% block body_class %}errorpage err404{% endblock %}
 
 {% block content %}
