--- a/readux/books/templates/books/snippets/list_volume_cover.html
+++ b/readux/books/templates/books/snippets/list_volume_cover.html
@@ -1,8 +1,12 @@
-<li class="cover" {% if obj.hasPrimaryImage %}style="background-image:url('{% url 'books:page-thumbnail' obj.hasPrimaryImage %}');background-color:#EEE;"{% endif %}>
-    <a href="{% url 'books:volume' obj.pid %}" title="{{ obj.title|truncatechars:100 }}">
+{% load readux_utils %}
+<li class="cover" {% if obj.hasPrimaryImage %}style="background-image:url('{% url 'books:page-thumbnail' obj.pid obj.hasPrimaryImage %}');background-color:#EEE;"{% endif %}>
+    {% url 'books:volume' obj.pid as volume_url %}
+    <a href="{{ volume_url }}" title="{{ obj.title|truncatechars:100 }}">
         {# show the title if there is no image #}
         {% if not obj.hasPrimaryImage %}
             <span>{{ obj.title|truncatechars:100 }}</span>
         {% endif %}
+        {# annotation count #}
+        {% include 'books/snippets/comment_count.html' with item_url=volume_url annotation_count=annotated_volumes %}
     </a>
 </li>
