--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -7,7 +7,7 @@
   {{ block.super }}
   {# <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/> #}
   {# local copy of annotator v2.0-alpha css #}
-  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.css' %}"/>
+  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.marginalia.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.meltdown.css' %}"/>
