--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.imgselect.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="{% static 'plugins/imgareaselect/css/imgareaselect-default.css' %}" />
   <script type="text/javascript" src="{% static 'plugins/imgareaselect/jquery.imgareaselect.min.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
