Show annotation modification time in marginalia
[#99056488]

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/rangyinputs-jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/element_resize_detection.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/moment.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.marginalia.js' %}"></script>
