Configurable footer display of annotation author
[#99058178]

--- a/sitemedia/plugins/annotator/annotator.marginalia.css
+++ b/sitemedia/plugins/annotator/annotator.marginalia.css
@@ -160,11 +160,19 @@ li.empty-item:first-child:last-child:after {
   cursor:initial;
 }
 
-.annotation-updated {
+.annotation-footer {
   padding: 5px;
-  font-style: italic;
   font-size: 90%;
 }
+
+.annotation-updated {
+  font-style: italic;
+}
+
+.annotation-author {
+  font-weight: bold;
+}
+
 
 /*
 ******************
