Set landscape layout for pages
[#101071168]

- Added styles for landscape layout
- Updated javascript reflow for new layout
- Added view value 'layout' to store preference
- if the first page is wider than it is tall, then change from 'default' to 'landscape'

--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -49,7 +49,7 @@
             p. {{ pages.start_index }} - {{ pages.end_index }}
         </div>
         <div id="cover-list" class="item-covers">
-            <ul class="media-list cover-view">
+            <ul class="media-list cover-view {{layout}}">
                 {% for page in pages.object_list %}
 
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
