Create template snippets for active/available facets & filters
[#105140816]

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -1,5 +1,5 @@
 {% extends 'site_base.html' %}
-{% load humanize %} {% load widget_tweaks %}
+{% load humanize widget_tweaks %}
 
 {% block page-subtitle %}Search Results | {% endblock %}
 
@@ -33,17 +33,7 @@
           </form>
         </div>
       </div>
-
-    {% if filters %} {# display filters that are currently in effect, with a link to remove #}
-
-      <div class="facets active-filters">
-        <ul class="nav nav-pills">
-         {% for field, val, rm_link in filters %}
-         {# if field has a value, display that (e.g. collection name); otherwise show field (e.g., read online) #}
-           <li><a href="?{{ rm_link }}">{% firstof val field %} <span class="glyphicon glyphicon-remove"></span></a></li>
-         {% endfor %}
-       </ul>
-    {% endif %}
+      {% include "books/snippets/active_filters.html" %}
 </header>
 <div class="container">
 <section class="volume-list">
@@ -76,31 +66,7 @@
             {% include "books/snippets/search_coverlist_toggle.html" %}
         </div>
 
-      <div class="facets">
-        {% if facets %}
-        <h3>Filter results</h3>
-
-          {% if facets.collection %}
-            <ul class="nav nav-pills">
-              <li><a href="#" class="disabled pill-text">with collection</a></li>
-              {% for label, count in facets.collection %}
-              <li><a class="text-center" href="?{{ url_params }}&amp;collection={{ label|urlencode }}">{{ label }}
-              <small>({{ count|intcomma }})</small></a> </li>
-              {% endfor %}
-            </ul>
-          </div>
-          {% endif %}
-
-          {% if facets.pages_loaded %}
-            <ul class="nav nav-pills">
-                <li><a class="text-center" href="?{{ url_params }}&amp;read_online=1">Read online
-                    <small>({{ facets.pages_loaded|intcomma }})</small></a> </li>
-            </ul>
-          {% endif %}
-
-        {% endif %}
-      </div>
-
+        {% include "books/snippets/facets.html" %}
 
       {% if items %} {# results to display #}
         {% include 'books/snippets/show_volumes.html' %}
