Add read online filter to collection browse
[#105140816]

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -66,7 +66,7 @@
             {% include "books/snippets/search_coverlist_toggle.html" %}
         </div>
 
-        {% include "books/snippets/facets.html" %}
+        {% include "books/snippets/facets.html" with show_heading=1 %}
 
       {% if items %} {# results to display #}
         {% include 'books/snippets/show_volumes.html' %}
