--- a/readux/books/templates/books/snippets/active_filters.html
+++ b/readux/books/templates/books/snippets/active_filters.html
@@ -9,4 +9,5 @@ it will be displayed; otherwise the field will be displayed.{% endcomment %}
        <li><a href="?{{ rm_link }}">{% firstof val field %} <span class="glyphicon glyphicon-remove"></span></a></li>
      {% endfor %}
    </ul>
+</div>
 {% endif %}
