--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -67,13 +67,21 @@ body{
 
     background-color: #ECDFDF;
 }
+.facets .nav-pills {
+    white-space: nowrap;
+}
 
 .facets .nav>li>a.pill-text {
     background: transparent;
     color: #555;
     cursor:default;
 }
-
+/* tweak facets for display on collection browse */
+.volume-list .facets {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
 article.carousel.page {
     min-height: 50em;
     background-position: center;
@@ -497,7 +505,7 @@ h1.site-title a:focus{
 }
 
 .pagination.pagination-dropdown{
-    margin-top: -10px;
+    margin-top: -5px;
     margin-bottom: 30px;
     width: 100%;
 }
