--- a/readux/books/templates/books/snippets/show_volumes.html
+++ b/readux/books/templates/books/snippets/show_volumes.html
@@ -4,7 +4,7 @@
       {% if mode = 'list' %}
       <div id="volume-list" class="item-list">
         {# <ul class="media-list volume-list"> #}
-            {% for obj in items.object_list %}
+            {% for obj in items %}
               {% include 'books/snippets/list_volume.html' %}
             {% endfor %}
         {# </ul> #}
@@ -15,7 +15,7 @@
     {% if mode = 'covers' %}
     <div id="cover-list" class="item-covers volume-covers">
         <ul class="media-list cover-view">
-            {% for obj in items.object_list %}
+            {% for obj in items %}
               {% include 'books/snippets/list_volume_cover.html' %}
              {% endfor %}
        </ul>
