--- a/readux/books/templates/books/volume_pages_list.html
+++ b/readux/books/templates/books/volume_pages_list.html
@@ -25,14 +25,14 @@
     {% include 'books/snippets/volume_header.html' %}
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-2 col-md-offset-5">
-            {% if pages.has_other_pages %}
-               {% include 'eultheme/snippets/pagination_dropdown.html' with results=pages %}
+            {% if page_obj.has_other_pages %}
+               {% include 'eultheme/snippets/pagination_dropdown.html' %}
             {% endif %}
         </div>
 
         <div id="view-toggle" class="pull-right padding">
             <div class="btn-group">
-                {% for page in pages.object_list %}
+                {% for page in pages %}
                     {% if forloop.first %}
                         <a id="covers" href="{% url 'books:page' vol.pid page.pid %}" class="btn"><span class="glyphicon glyphicon-file"></span></a>
                     {% endif %}
@@ -46,11 +46,11 @@
     <article>
 
         <div class="text-center text-muted">
-            p. {{ pages.start_index }} - {{ pages.end_index }}
+            p. {{ page_obj.start_index }} - {{ page_obj.end_index }}
         </div>
         <div id="cover-list" class="item-covers">
             <ul class="media-list cover-view {{layout}}">
-                {% for page in pages.object_list %}
+                {% for page in pages %}
 
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
                 <li class="">
@@ -65,8 +65,8 @@
             </ul>
         </div>
 
-    {% if pages.has_other_pages %}
-       {% include 'eultheme/snippets/pagination_all_pages.html' with results=pages %}
+    {% if page_obj.has_other_pages %}
+       {% include 'eultheme/snippets/pagination_all_pages.html' %}
     {% endif %}
 
     </article>
