Update tests and clean up refactor based on tests
[#105507826]

--- a/readux/books/templates/books/volume_pages_search.html
+++ b/readux/books/templates/books/volume_pages_search.html
@@ -9,6 +9,7 @@
     {% include 'books/snippets/volume_header.html' %}
     <article>
         <div class="container">
+        paginator count = {{ paginator.count }}
             {% if paginator.count %}
                 <h2 class="section-heading">{{ paginator.count|intcomma }} matching page{{ paginator.count|pluralize }} found</h2>
 
