--- a/readux/collection/templates/collection/collection_detail.html
+++ b/readux/collection/templates/collection/collection_detail.html
@@ -82,13 +82,13 @@
 </header>
 <div class="container">
     <section class="volume-list">
-      {% if items.paginator.count %}
+      {% if paginator.count %}
         <h2 class="section-heading">
-      {% if filters %}Displaying {{ items.paginator.count|intcomma }} volume{{ items.paginator.count|pluralize }}
-      {% else %}{{ items.paginator.count|intcomma }} volume{{ items.paginator.count|pluralize }} in this collection</h2>{% endif %}
+      {% if filters %}Displaying {{ paginator.count|intcomma }} volume{{ paginator.count|pluralize }}
+      {% else %}{{ paginator.count|intcomma }} volume{{ paginator.count|pluralize }} in this collection{% endif %}
       </h2>
         <p class="lead">
-            {% if items.has_other_pages and items.object_list|length > 1 %}
+            {% if page_obj.has_other_pages and items|length > 1 %}
             displaying {{ items.start_index|intcomma }} - {{ items.end_index|intcomma }}{% endif %}
             {# if more than one item on this page, display range of results #}
         </p>
@@ -111,7 +111,6 @@
                 {% include 'collection/snippets/sort_dropdown.html' %}
             </div>
         </div>
-
 
         {% include 'books/snippets/show_volumes.html' with show_collection='False' %}
 
