--- a/readux/books/templates/books/snippets/list_page.html
+++ b/readux/books/templates/books/snippets/list_page.html
@@ -2,7 +2,7 @@
 <div class="media">
     {% url 'books:page' vol.pid page.pid as page_url %}
     <a class="pull-left" href="{{ page_url }}" title="Page {{ page.page_order }}">
-        <img class="thumbnail" src="{% url 'books:page-mini-thumb' vol.pid page.pid %}"/>
+        <img class="thumbnail" src="{{ page.iiif.mini_thumbnail }}"/>
     </a>
     {% if page.score %}
     <div class="col-xs-1 pull-right">
