--- a/readux/books/templates/books/volume_detail.html
+++ b/readux/books/templates/books/volume_detail.html
@@ -1,16 +1,17 @@
 {% extends 'site_base.html' %}
 
 {% block metadata %}{{ block.super }}
-    {% url 'books:page-thumbnail' vol.pid vol.primary_image as image_url %}
+  {% with image_url=vol.primary_image.iiif.thumbnail %}
     <meta property="og:title" content="{{ vol.display_label }}"/>
     <meta itemprop="og:headline" content="{{ vol.display_label }}" />
-    <meta property="og:image" content="{{ site_root }}{{ image_url }}"/>
+    <meta property="og:image" content="{{ image_url }}"/>
     <meta property="og:description" content="{{ vol.book.best_description }}" />
 
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:title" content="{{ vol.display_label }}" />
-    <meta property="twitter:image" content="{{ site_root }}{{ image_url }}" />
+    <meta property="twitter:image" content="{{ image_url }}" />
     <meta property="twitter:description" content="{{ vol.book.best_description }}" />
+  {% endwith %}
 {% endblock %}
 
 {% block page-subtitle %}{{ vol.display_label }} | {% endblock %}
@@ -29,11 +30,12 @@
         <div class="media">
             {% if vol.primary_image %}
                 <div class="pull-left">
-                    {% url 'books:page-thumbnail' vol.pid vol.primary_image as cover_url %}
+                    {% with cover_url=vol.primary_image.iiif.thumbnail %}
                     {% if vol.has_pages %}<a href="{% url 'books:page' vol.pid vol.primary_image.pid %}">{% endif %}
                     <img class="thumbnail media-object" property="schema:image" src="{{ cover_url }}"/>
                     {% if vol.has_pages %}</a>{% endif %}
                     <a property="schema:thumbnailUrl" href="{{ cover_url }}" class="hidden"></a>
+                    {% endwith %}
                 </div>
             {% endif %}
 
