--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -53,7 +53,9 @@
 {% block navlinks %}
 {# NOTE: suppressed for now because collection browse is site home page #}
 {# <li><a href="{% url 'collection:browse' %}">Collections</a></li> #}
+  {% if feincms_page %} {# feincms nav only works if a page is laoded (should be set via context processor) #}
   {% feincms_nav feincms_page level=1 as nav %}
+  {% endif %}
   {% for page in nav %}
        <li><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
   {% endfor %}
