--- a/readux/books/templates/books/volume_pages_list.html
+++ b/readux/books/templates/books/volume_pages_list.html
@@ -1,5 +1,5 @@
 {% extends 'site_base.html' %}
-{% load readux_utils %}
+{% load readux_utils static %}
 
 {% block page-subtitle %}{{ vol.display_label }}, p.{{ pages.start_index }}-{{ pages.end_index }} | {% endblock %}
 
@@ -55,8 +55,7 @@
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
                 <li class="">
                     {% url 'books:page' vol.pid page.pid as page_url %}
-                    <a class="cover thumbnail" style="background-image:url('{{ page.iiif.thumbnail }}')" href="{{ page_url }}" title="Page {{ page.page_order }}">
-
+                    <a class="cover thumbnail" style="background-image:url('{{ page.iiif.thumbnail }}'),url('{% static 'img/notfound_page.png' %}')" href="{{ page_url }}" title="Page {{ page.page_order }}">
                         <p class="page-number">p. {{page.page_order}}</p>
                         {# page annotation count #}
                         {% include 'books/snippets/comment_count.html' with item_url=page_url annotation_count=annotated_pages %}
