--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -33,12 +33,11 @@
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.marginalia.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/annotator-meltdown/scripts/annotator.meltdown.js"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.imgselect.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'plugins/imgareaselect/css/imgareaselect-default.css' %}" />
-  <script type="text/javascript" src="{% static 'plugins/imgareaselect/jquery.imgareaselect.min.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.1.0/annotator.imgselect.min.js"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
 
