--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -5,35 +5,27 @@
 
 {% block css %}
   {{ block.super }}
-  {# <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/> #}
   {# local copy of annotator v2.0-alpha css #}
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
-  <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
+  <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.css" />
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.marginalia.css' %}"/>
-  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.meltdown.css' %}"/>
 {% endblock %}
 
 {% block javascript %}
   {# FIXME: this should be redundant, but annotator requires at least jquery 1.6 and wasn't workining without #}
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   {{ block.super }}
-  {# <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script> #}
   {# local copy of annotator; currently v2.0.0-alpha.2 #}
   <script type="text/javascript" src="{% static 'js/annotator.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/showdown.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/openseadragon/openseadragon.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/deepzoom.js' %}"></script>
-  {# NOTE: annotator plugins disabled until they can be updated to 2.0 #}
-<!--  <script type="text/javascript" src="{% static 'plugins/annotator/marginviewer.js' %}"></script> -->
-  <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/js-markdown-extra.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/rangyinputs-jquery.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/element_resize_detection.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/moment.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.marginalia.js' %}"></script>
-  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/annotator-meltdown/scripts/annotator.meltdown.js"></script>
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.js"></script>
+
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
