--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="{% static 'js/deepzoom.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/src/scripts/bootstrap.dropdown.js"></script>
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.1.1/annotator.marginalia.min.js"></script>
 
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.js"></script>
